--- a/src/scss/_components.table-of-contents.scss
+++ b/src/scss/_components.table-of-contents.scss
@@ -57,6 +57,7 @@
 
       @supports (display: grid) {
         padding-right: 0.5rem;
+        position: static;
       }
     }
 
